# robin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/flames/: sierpinski.json
include/robin/: config.h  constants.h
include/robin/color/: accumulation.h  color.h  gradient_lookup.h  gradient_point.h  gradient_stop.h  pixel.h  pixel_accumulation.h
include/robin/distribution/: xoshiro.h
include/robin/engine/: cdf.h  engine.h  worker.h
include/robin/generation/: affine.h  flame.h  point2d.h  transformation.h  variation.h
include/robin/render/: color.h  frame_events.h  render.h  renderer.h  telemetry_hud.h  tonemap.h
include/robin/utils/: parse_flame_options.h  parse_settings.h  save_image.h
src/: main.cpp
src/robin/: accumulation.cpp
src/robin/color/: accumulation.cpp  gradient_lookup.cpp
src/robin/distribution/: alias_distribution.cpp
src/robin/engine/: cdf.cpp  engine.cpp  worker.cpp
src/robin/generation/: variation.cpp
src/robin/render/: render.cpp  renderer.cpp  telemetry_hud.cpp  tonemap.cpp
src/robin/utils/: parse_flame_options.cpp  parse_settings.cpp  save_image.cpp
